# Graphite

./: .gitignore  Cargo.toml
.nix/: flake.nix
desktop/: Cargo.toml
desktop/.cargo/: config.toml
desktop/bundler/: Cargo.toml
desktop/bundler/src/: common.rs  mac.rs  win.rs
desktop/platform/mac/: Cargo.toml
desktop/platform/mac/src/: bundle.rs
desktop/platform/win/: Cargo.toml  build.rs
desktop/platform/win/src/: main.rs
desktop/src/: lib.rs
desktop/src/cef/internal/: display_handler.rs
desktop/src/cef/texture_import/: common.rs  iosurface.rs
desktop/src/render/: graphics_state.rs
desktop/src/window/: win.rs
editor/src/: node_graph_executor.rs  test_utils.rs
editor/src/messages/portfolio/: portfolio_message_handler.rs
editor/src/messages/portfolio/document/: document_message_handler.rs
editor/src/messages/tool/common_functionality/: auto_panning.rs  utility_functions.rs
editor/src/messages/tool/tool_messages/: artboard_tool.rs  freehand_tool.rs  gradient_tool.rs  pen_tool.rs  spline_tool.rs  text_tool.rs
editor/src/messages/viewport/: viewport_message_handler.rs
frontend/src/components/panels/: Document.svelte
frontend/src/utility-functions/: viewports.ts
frontend/wasm/src/: editor_api.rs
node-graph/graph-craft/src/document/: value.rs
node-graph/gstd/src/: render_node.rs
node-graph/libraries/vector-types/src/vector/: click_target.rs  misc.rs
node-graph/nodes/math/src/: lib.rs
node-graph/nodes/vector/src/: vector_nodes.rs
node-graph/wgpu-executor/src/: context.rs
(+13 files in other folders)
