[package]
name = "graphite-desktop-bundler"
version = "0.1.0"
description = "Graphite Desktop Bundler"
authors = ["Graphite Authors <contact@graphite.rs>"]
license = "Apache-2.0"
repository = ""
edition = "2024"
rust-version = "1.87"

[dependencies]
cef-dll-sys = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
serde = { workspace = true }
plist = { version = "*" }
